# TriangulateOBJ-App

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TriangulateOBJ.h  cmd.h  div.h  launch.vs.json  main.cpp  out.h  premake5.lua
ObjFiles/: lego.mtl
